# ffmpegdemos

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/demo/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/demo/ndkdemo/: FFmpegVideoPlayActivity.java  MainActivity.java  OboeActivity.java
app/src/main/res/layout/: activity_ffmpeg_video_play.xml  activity_main.xml  activity_oboe.xml
app/src/test/java/com/demo/ndkdemo/: ExampleUnitTest.java
ffmpeglib/: CMakeLists.txt  build.gradle
ffmpeglib/src/androidTest/java/com/demo/ffmpeglib/: ExampleInstrumentedTest.java
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: FFmpegKit.cpp
ffmpeglib/src/main/cpp/include/: com_demo_ffmpeglib_FFmpegKit.h
ffmpeglib/src/main/java/com/demo/ffmpeglib/: FFmpegKit.java
ffmpeglib/src/test/java/com/demo/ffmpeglib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
oboelib/: CMakeLists.txt  build.gradle
oboelib/src/androidTest/java/com/demo/oboelib/: ExampleInstrumentedTest.java
oboelib/src/main/: AndroidManifest.xml
oboelib/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  Definitions.h  OboeKit.cpp  Oscillator.cpp  Oscillator.h  SoundRecording.cpp  SoundRecording.h  SoundRecordingUtilities.cpp  SoundRecordingUtilities.h
oboelib/src/main/java/com/demo/oboelib/: OboeKit.java
oboelib/src/main/res/values/: strings.xml
oboelib/src/test/java/com/demo/oboelib/: ExampleUnitTest.java
